Première version stable avec automation de build